# VirtualScreeningWithSynthons

./: .gitignore  README.md  environment.yml  pyproject.toml
analysis/: environment_docking.yml
analysis/docking/: prepare_parquet.py  remove_reflig.py
analysis/scoring/: pharmacophore.py  scoring.py  utilities.py
enumeration/: enumeration_single_step.py  main.py  output_sinks.py
examples/: fragment_synthonization.ipynb  helpers.py
src/synthons/: SyntOn_BBScaffoldGeneration.py  SyntOn_BBsBulkClassificationAndSynthonization.py  SyntOn_BulkFragmentationEnumerationAndAnaloguesDesign.py  SyntOn_environment.yml
src/synthons.egg-info/: PKG-INFO
src/synthons/SyntOn/: README.md  SyntOn.py  SyntOn_BBs.py  SyntOn_Classifier.py  UsefulFunctions.py
src/synthons/analysis/: README.md
src/synthons/analysis/docking/: qvina_dock_batch.py
src/synthons/analysis/scoring/: pharmacophore.py
src/synthons/enumeration/: enumeration_single_step.py  main.py  reactions.py  sites.py  standardization.py  synthons.py
test/: 100_mols.sdf  100_mols.smi  100_mols.smi_withIDs  test_BBmode.smi  test_NotClassified  test_Synthmode.smi
